...
        return imageView
    }()
    
    private var likeButton: UIButton = {
        let button = UIButton.systemButton(with: UIImage(named: "likeOn") ?? UIImage(), target: nil, action: #selector(didLikeTapped))
        button.translatesAutoresizingMaskIntoConstraints = false
        button.accessibilityIdentifier = "LikeButton"
        return button
    }()
    
    private var dateLabel: UILabel = {
        let label = UILabel()
        label.translatesAutoresizingMaskIntoConstraints = false
...
